Converted Staff formatting to be like Medical and others